# chimpress

./: .gitignore  Makefile  Makefile.am  README.rst  autogen.sh  configure.ac  test.sh
datafiles/: datafile.txt  l.tar  linebreaks.txt  pg1342.txt  welllog.las
src/: Makefile.am  bitfile.cpp  bitstream.c  bitstream.cpp  byteprint.h  lzw_dec.c  lzw_enc.c  lzw_enc.cpp  rle_dec.c  rle_enc.cpp
